Added and fixed up new endpoints and added swagger doc
